Version 3.98-1
  
  *      Compilation error with clang. Simple declaration of a routine.

  *      xmlXIncludes() added.
 
  *      Changes to simplifyPath().

Version 3.98-0

  *      Update for libxml2-2.9.1 and reading from a connection for xmlEventParse().

  *      xmlIncludes() is a hierarchical version of getXIncludes()

  *      Modifications to xmlSource(), e.g. verbose = TRUE as default.

Version 3.97-0

  *      Fix for xmlValue(node) = text.  Identified by Lawrence Edwards.
         Uses xmlNodeSetContent() now and leaves freeing the original content to that routine.

  *      Updates for xmlSource()

Version 3.96-1
 
  *     readHTMLTable() ignores headers that are over 999 characters.

  *     Fix a problem in readHTMLTable() with some table headers not having 
        the correct number of elements to match the columns.
  
Version 3.96-0

  *     Introduced readHTMLList(), getHTMLLinks(), getHTMLExternalFiles(), getXIncludes().

  *     When serializing XMLNode objects, i.e. R representations of nodes, ensure " and <, etc. in attributes
        are serialized correctly.


Version 3.95-1

  *     Allow htmlParse(), xmlParse(), etc. ?

Version 3.95-0

  *     Moved development version of the source code for the package to github -
        https://github.com/omegahat/XML.git

  *     Changes to the structure of the package to allow installation directly rather than
        via a one-step staging into the R package structure.

  *     Sample XML documents moved from data/ to exampleData, and examples updated.

  *     getDefaultNamespace() and matchNamespaces() use simplify = TRUE to call
        xmlNamespaceDefinitions() to get the namespaces as a character vector rather than
        list.

  *     Documentation updates
 

Version 3.94-0

  *     getNodeLocation() now reports the actual line number for text nodes rather than 0,
        using the sibling nodes' or parent node's line number. 
